--- a/package.json
+++ b/package.json
@@ -12,13 +12,24 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "antd": "^4.16.13",
+    "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
+    "@types/react": "^17.0.19",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "^4.4.2"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.25.1",
+    "prettier": "2.3.2"
   }
 }
