--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "typescript": "^4.4.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.19",
@@ -30,6 +29,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.25.1",
-    "prettier": "2.3.2"
+    "prettier": "2.3.2",
+    "typescript": "^4.4.2"
   }
 }
