--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "antd": "^4.16.13",
+    "firebase": "^8.9.1",
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-firebaseui": "^5.0.2"
   },
   "devDependencies": {
+    "@types/node": "^16.7.13",
     "@types/react": "^17.0.19",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
