--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-firebaseui": "^5.0.2"
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.19",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
